openapi: improve documentation
